--- a/banner.css
+++ b/banner.css
@@ -54,6 +54,7 @@ html {
     font-size: 1rem;
     line-height: 1.8;
     letter-spacing: 2px;
+    color: rgb(103, 110, 118);
   }
 
 .cta-section {
@@ -65,6 +66,7 @@ html {
     font-size: 0.9rem;
     letter-spacing: 2px;
     line-height: 1.6;
+    color: rgb(103, 110, 118);
   }
 
 
