--- a/style.css
+++ b/style.css
@@ -624,8 +624,13 @@ main{
 
 .carousel-container {
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     padding: 20px 0 20px 10px;
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    touch-action: pan-y;
   }
 
 .carousel {
