--- a/style.css
+++ b/style.css
@@ -631,12 +631,23 @@ main{
     position: relative;
     overflow: hidden;
     padding: 20px 0 20px 10px;
+
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    touch-action: pan-y; /* Only allow vertical gestures to scroll page */
   }
 
 .carousel {
     display: flex;
     transition: transform 0.5s ease-in-out;
+
+    flex-wrap: nowrap;
   }
+
+  .carousel > * {
+    flex: 0 0 auto;
+  }
+
 
 .card {
     background-color: var(--card-bg);
