--- a/style.css
+++ b/style.css
@@ -629,7 +629,7 @@ main{
 
 .carousel-container {
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     padding: 20px 0 20px 10px;
 
     overflow-x: auto;
