--- a/Styles/main.css
+++ b/Styles/main.css
@@ -270,7 +270,7 @@ nav{
     display: flex;
     flex: 1;
     color: white;
-    padding: 10px 0 0 10px;
+    padding: 10px 0 10px 10px;
     margin-bottom: 5px;
     cursor: pointer;
     opacity: 0.8;
