--- a/Styles/certifications.css
+++ b/Styles/certifications.css
@@ -8,13 +8,16 @@ html {
 }
 
 .cert-section {
-    max-width: 1200px;
+    /* max-width: 1200px; */
     margin: 0 auto;
     text-align: center;
     background-color: var(--card-bg);
-    padding: 50px 20px;
+    /* padding: 50px 20px; */
     border-radius: 20px;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
+    margin-bottom: 60px;
+    max-width: 1300px;
+    padding: 50px 30px;
   }
 
 .cert-section h2 {
@@ -31,7 +34,9 @@ html {
 .card-grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    /* gap: 20px; */
+    column-gap: 20px;
+    row-gap: 30px;
     justify-content: center;
   }
 
