--- a/src/App.css
+++ b/src/App.css
@@ -325,9 +325,14 @@ main {
 .about-focus {
   border: 1px solid var(--color-border);
   border-radius: var(--radius-lg);
-  padding: var(--space-5);
+  padding: 9px;
+  /* padding: var(--space-5); */
   background: var(--color-surface);
   box-shadow: 0 10px 24px -20px var(--color-shadow);
+}
+
+.about-focus img{
+  border-radius: 10px;
 }
 
 .about-focus h3 {
